add container to force footer to bottom of page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
       <h1>That's a Holiday?</h1>
     </header>
-    <div class="content">
+    <div class="container">
 
     </div>
     <footer>
