--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
       <select name="Year" id="year">
         <option value="2021" selected="selected">2021</option>
       </select>
+      <button type="submit">Submit</button>
     </form>
     <div id="results"></div>
   </div>
