--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
     <p>Created by Chad Quilling</p>
     <p>Created Using: <a href="https://github.com/BYUCS260/weather-app-QuilChaser">GitHub</a></p>
   </footer>
+  <script text="type/javascript" src="scripts/script.js">
+  </script>
 </body>
-
 </html>
