add explication text.

--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
       </div>
       <button type="submit" id="submit">Submit</button>
     </form>
-    <div id="results"></div>
+    <div id="results">
+      Select a date from 2021 and discover if it had a holiday (or more than one)!
+    </div>
   </div>
   <footer>
     <p>Created by Chad Quilling</p>
