--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <button type="submit" id="submit">Submit</button>
     </form>
     <div id="results">
-      Select a date from 2021 and discover if it had a holiday (or more than one)!
+      <h2>Select a date from 2021 and discover if it had a holiday (or more than one)!</h2>
     </div>
   </div>
   <footer>
