Adjust so results are not always present.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <h1>That's a Holiday?</h1>
   </header>
   <div class="container">
+    <div id="explain">
+      <h2>Select a date from 2021 and discover if it had a holiday (or more than one)!</h2>
+    </div>
     <form>
       <label class="form_description">Select a Date:</label>
       <div id="dropdownConntainer">
