--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </header>
   <div class="container">
     <div id="explain">
-      <h2>Select a date from 2021 and discover if it had a holiday (or more than one)!</h2>
+      <h2>Select a date from 2021 and discover if it is a holiday (or is more than one)!</h2>
     </div>
     <form>
       <label class="form_description">Select a Date:</label>
