Add waiting text.

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <button type="submit" id="submit">Submit</button>
     </form>
     <div id="results">
-      <h2>Select a date from 2021 and discover if it had a holiday (or more than one)!</h2>
+      <h2>Please wait for data to populate.</h2>
     </div>
   </div>
   <footer>
