--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
   </div>
   <footer>
     <p>Created by Chad Quilling</p>
-    <a href="https://www.pexels.com">Photos provided by Pexels</a>
+    <p><a href="https://www.pexels.com">Photos provided by Pexels</a></p>
+    <p><a href="https://www.abstractapi.com">Holidays provided by AbstractAPI</a></p>
     <p>Created Using: <a href="https://github.com/QuilChaser/ThatsAHoliday">GitHub</a></p>
   </footer>
   <script text="type/javascript" src="scripts/script.js">
